crates/toml_edit/tests/snapshots/invalid/ext/keys/no-eol-3.stderr
TOML parse error at line 2, column 6
  |
2 | 0="0"[[0000l0]]
  |      ^
expected newline, `#`
